// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / FormLabel As a wrapper 1`] = `
.c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

<label
  className="c0"
  hidden={false}
>
  <span
    className="c1"
  >
    Username
    <input
      type="text"
    />
  </span>
</label>
`;

exports[`Storyshots Atoms / FormLabel Default 1`] = `
Array [
  .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

<label
    className="c0"
    hidden={false}
    htmlFor="unique-id"
  >
    <span
      className="c1"
    >
      Username
    </span>
  </label>,
  <input
    id="unique-id"
    type="text"
  />,
]
`;

exports[`Storyshots Atoms / FormLabel Disabled 1`] = `
Array [
  .c0 {
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: not-allowed;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #A0A09B;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

<label
    className="c0"
    hidden={false}
    htmlFor="unique-id"
  >
    <span
      className="c1"
    >
      This is disabled
    </span>
  </label>,
  <input
    disabled={true}
    id="unique-id"
    type="text"
  />,
]
`;

exports[`Storyshots Atoms / FormLabel With hidden label 1`] = `
Array [
  .c0 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

<label
    className="c0"
    hidden={true}
    htmlFor="unique-id-2"
  >
    <span
      className="c1"
    >
      Username
    </span>
  </label>,
  <input
    id="unique-id-2"
    type="text"
  />,
]
`;
